# jsonapi-pydantic

./: .flake8  .gitignore  Makefile  license.md  pyproject.toml  readme.md
.github/: funding.yml
examples/jsonapi/: basic_error_object.py  multiple_errors.py  pagination_links.py  sparse_fieldsets.py
jsonapi_pydantic/: __init__.py  constants.py  utils.py
jsonapi_pydantic/v1_0/: __init__.py  error.py  jsonapi.py  links.py  meta.py  resource_identifier.py  toplevel.py
jsonapi_pydantic/v1_0/resource/: __init__.py  relationship.py  relationship_links.py  resource.py
tests/v1_0/: conftest.py  toplevel_test.py
