[tool.poetry]
name = "jsonapi-pydantic"
version = "0.2.3"
description = "JSON:API implementation with pydantic."

authors = ["impocode <impocode@impocode.com>"]
maintainers = ["impocode <impocode@impocode.com>"]

license= "MIT"
readme = "readme.md"

keywords = ["jsonapi", "pydantic"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

homepage = "https://github.com/impocode/jsonapi-pydantic"
repository = "https://github.com/impocode/jsonapi-pydantic"
documentation = "https://github.com/impocode/jsonapi-pydantic"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^2.1.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/impocode/jsonapi-pydantic/issues"

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = false

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
