[tool.poetry]
name = "jsonapi-pydantic"
version = "0.2.5"
description = "JSON:API implementation with pydantic."

authors = ["impocode <impocode@impocode.one>"]
maintainers = ["impocode <impocode@impocode.one>"]

license= "MIT"
readme = "readme.md"

keywords = ["jsonapi", "pydantic"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

homepage = "https://github.com/impocode/jsonapi-pydantic"
repository = "https://github.com/impocode/jsonapi-pydantic"
documentation = "https://github.com/impocode/jsonapi-pydantic"

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^2.1.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/impocode/jsonapi-pydantic/issues"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pytest = "^8.1.1"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
